--- a/style.css
+++ b/style.css
@@ -15,11 +15,15 @@ body {
 }
 
 h1 {
-  margin: 10px;
+  font-size: 50px;
+  background: -webkit-linear-gradient(rgb(187, 4, 243), #333);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin: 20px;
 }
 
 .box {
-  background-color: steelblue;
+  background-color: hsl(299, 83%, 24%);
   color: #fff;
   display: flex;
   align-items: center;
@@ -30,13 +34,13 @@ h1 {
   border-radius: 10px;
   box-shadow: 2px, 4px, 5px rgba(0, 0, 0, 0.3);
   /* ,ake the box way off the screen default is 0*/
-  transform: translateX(200%);
-  transition: transform 0.4 ease;
+  transform: translateX(400%);
+  transition: transform 0.4s ease;
 }
 
 /* even ones locate left side */
 .box:nth-of-type(even) {
-  transform: translateX(-200%);
+  transform: translateX(-400%);
 }
 .box.show {
   transform: translateX(0);
@@ -44,4 +48,9 @@ h1 {
 
 .box h2 {
   font-size: 45px;
+  font-style: oblique;
+}
+
+.other-content {
+  height: 30vh;
 }
