--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,600;1,700&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-color: #efedd6;
-  font-family: 'Roboto', sans-serif;
+  background-color: #fff;
+  font-family: 'Playfair', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,11 +15,25 @@ body {
 }
 
 h1 {
-  font-size: 50px;
-  background: -webkit-linear-gradient(rgb(187, 4, 243), #333);
+  font-size: 45px;
+  background: -webkit-linear-gradient(rgb(202, 146, 219), #333);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   margin: 20px;
+}
+
+.panel {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 80vh;
+  border-radius: 30px;
+  color: purple;
+  cursor: pointer;
+  flex: 0.9;
+  margin: 3px;
+  position: relative;
+  transition: flex 0.7s ease-in;
 }
 
 .box {
@@ -48,6 +62,7 @@ h1 {
 
 .box h2 {
   font-size: 45px;
+  color: #fff;
   font-style: oblique;
 }
 
