--- a/style.css
+++ b/style.css
@@ -6,20 +6,23 @@
 
 body {
   background-color: #fff;
-  font-family: 'Playfair', sans-serif;
+  font-family: 'Playfair Display', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: 0;
+  overflow-x: hidden;
 }
 
 h1 {
   font-size: 45px;
-  background: -webkit-linear-gradient(rgb(202, 146, 219), #333);
+
+  background: -webkit-linear-gradient(rgb(213, 99, 248), #333);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   margin: 20px;
+  padding: 15px;
 }
 
 .panel {
